--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "main": "index.js",
   "scripts": {
     "test": "npx cypress open",
-    "cy:dash": "npx cypress run --record --key 06c81e20-c218-4ec9-b9c9-6b16f0c937db",
-    "cy:book": "cypress run --spec 'cypress/integration/booking-ticket-in-accessible-hall.spec.js' --record --key 06c81e20-c218-4ec9-b9c9-6b16f0c937db",
-    "cy:home": "cypress run --spec 'cypress/integration/home-page-display.spec.js' --record --key 06c81e20-c218-4ec9-b9c9-6b16f0c937db",
-    "cy:login": "cypress run --spec 'cypress/integration/login-verification-in-admin.spec.js' --record --key 06c81e20-c218-4ec9-b9c9-6b16f0c937db",
-    "cy:parallel": "npm run cy:book -- --browser chrome --group Spec1 --ci-build-id 1 & npm run cy:home -- --browser chrome --group Spec2 --ci-build-id 1 & npm run cy:login -- --browser chrome --group Spec3 --ci-build-id 1"
+    "cy:dash": "npx cypress run --record --key 390aeec7-d0da-48e9-8e58-c3752e9d7a0b",
+    "cy:book": "cypress run --spec 'cypress/integration/user/booking-ticket-in-accessible-hall.spec.js' --record --key 390aeec7-d0da-48e9-8e58-c3752e9d7a0b",
+    "cy:home": "cypress run --spec 'cypress/integration/user/home-page-display.spec.js' --record --key 390aeec7-d0da-48e9-8e58-c3752e9d7a0b",
+    "cy:login": "cypress run --spec 'cypress/integration/admin/login-verification-in-admin.spec.js' --record --key 390aeec7-d0da-48e9-8e58-c3752e9d7a0b",
+    "cy:admin": "cypress run --spec 'cypress/integration/admin/*.js' --record --key 390aeec7-d0da-48e9-8e58-c3752e9d7a0b",
+    "cy:user": "cypress run --spec 'cypress/integration/user/*.js' --record --key 390aeec7-d0da-48e9-8e58-c3752e9d7a0b",
+    "cy:parallelchrome": "npm run cy:book -- --browser chrome --group Spec1 --ci-build-id 1 & npm run cy:home -- --browser chrome --group Spec2 --ci-build-id 1 & npm run cy:login -- --browser chrome --group Spec3 --ci-build-id 1",
+    "cy:parallelelectron": "npm run cy:book -- --browser electron --group Spec1 --ci-build-id 2 & npm run cy:home -- --browser electron --group Spec2 --ci-build-id 2 & npm run cy:login -- --browser electron --group Spec3 --ci-build-id 2",
+    "cy:parallelfirefox": "npm run cy:book -- --browser firefox --group Spec1 --ci-build-id 3 & npm run cy:home -- --browser firefox --group Spec2 --ci-build-id 3 & npm run cy:login -- --browser firefox --group Spec3 --ci-build-id 3",
+    "cy:parallel2browsers": "npm run cy:book -- --browser chrome --group Spec1 --ci-build-id 12 & npm run cy:home -- --browser electron --group Spec2 --ci-build-id 12",
+    "cy:parallel2directories": "npm run cy:admin -- --browser chrome --group Spec1 --ci-build-id 100 & npm run cy:user -- --browser chrome --group Spec2 --ci-build-id 100",
+    "cy:jenkins": "npx cypress run --spec 'cypress/integration/admin/*.js' & npx cypress run --spec 'cypress/integration/user/*.js'"
   },
   "author": "",
   "license": "ISC",
